# Optimotive-Preference

./: .CVProcessor.cpp.swp  .PassengerMap.h.swp  CVProcessor.cpp  CVProcessor.h  Controllable.cpp  Controllable.h  FaceData.cpp  FaceData.h  PIN_DESIGNATIONS.txt  Passenger.cpp  Passenger.h  PassengerMap.cpp  PassengerMap.h  ProfileData.cpp  ProfileData.h  ProfileManager.cpp  ProfileManager.h  README.md  Run.py  SysConfig.cpp  SysConfig.h  TestController.cpp  TestController.h  VehicleInterface.cpp  VehicleInterface.h  main-pseudocode.cpp
Keyboard/: Keyboard
Test/: h-bridge-test  h-bridge-test.cpp  trans-test.cpp
Test/Full-Test/src/: MotorManager.cpp  Run.py  main.cpp
Test/Keyboard/: main.cpp  stop  stop.cpp
Unix/: CMakeCache.txt  CMakeLists.txt  Makefile  Optimotive  Run.py  cmake_install.cmake
src/: Build.py  FaceDetector.cpp  FaceDetector.h  KB.py  Motor.cpp  Motor.h  MotorManager.h
